# octonomy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TODOS.md  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: BUILD-36.md  api.md  architecture.md  development.md  events.md  openapi-v2.yaml  openapi.yaml  operations.md  release.md  versioning.md
octonomy/assignments/: apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
octonomy/audit/: apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
octonomy/core/: api.py  apps.py  audit.py  auth.py  checks.py  errors.py  logging.py  metrics.py  middleware.py  models.py  pagination.py  responses.py  selectors.py  serializers.py  validators.py  versioning.py  views.py
octonomy/events/: apps.py  dispatch.py  models.py  services.py
octonomy/openapi/: apps.py  examples.py  schema.py
octonomy/service_auth/: __init__.py  apps.py  models.py  services.py
octonomy/tags/: alias_selectors.py  alias_serializers.py  alias_services.py  alias_views.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py  vocabulary_selectors.py  vocabulary_serializers.py  vocabulary_services.py  vocabulary_views.py
tests/: conftest.py  factories.py  test_health.py
tests/api/: test_namespace_audit_outbox.py  test_namespace_v2_api_flag.py  test_v1_regression.py  test_v2_namespace_api.py  test_versioning.py
tests/assignments/: test_alias_assignment_api.py  test_api.py  test_idempotency.py  test_services.py  test_tenant_isolation.py
tests/audit/: test_api.py
tests/auth/: test_grant_db_filter.py  test_namespace_authorization.py  (+1 more)
(+53 files in other folders)
