[project]
name = "octonomy"
version = "1.0.0"
description = "Multi-tenant tag management and taxonomy service."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "django>=5.0,<5.3",
  "djangorestframework>=3.15,<3.18",
  "drf-spectacular>=0.27,<0.31",
  "psycopg[binary]>=3.2,<3.4",
  "dj-database-url>=2.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "factory-boy>=3.3,<3.4",
  "pytest>=8.3,<10.0",
  "pytest-django>=4.9,<5.0",
  "pytest-cov>=5.0,<8.0",
  "pip-audit>=2.7,<3.0",
  "ruff>=0.8,<0.16",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra --cov=octonomy --cov-report=term-missing"

[tool.coverage.run]
source = ["octonomy"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
